[package]
name = "untitled-stream-game"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "stream", "time"] }
futures-channel = "0.3"
tungstenite = { version = "0.11", default-features = false }
tokio-tungstenite = "0.11"
url = "2.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
