[package]
name = "untitled-stream-game"
version = "0.1.0"
authors = ["T.J. Telan <t.telan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "0.2", features = ["fs", "stream", "sync", "time", "macros"] }
warp = "0.2"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
rand = "0.7"
